examples/test/testpolicy15035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15035
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key8: value9
      key40: value24
      key9: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value39
      podSelector:
        matchLabels:
          key41: value15
